--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "mobile",
+  "name": "etch",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev": "next dev",
+    "build": "next build",
+    "start:next": "next start"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
@@ -20,7 +23,10 @@
     "expo-image-picker": "^16.0.6",
     "expo-router": "^4.0.19",
     "expo-status-bar": "~2.0.1",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.5",
     "react": "18.3.1",
+    "react-dom": "^18.2.0",
     "react-native": "0.76.7",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "4.12.0",
@@ -31,7 +37,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/node": "^20.11.19",
     "@types/react": "~18.3.12",
+    "@types/react-dom": "^18.2.57",
     "typescript": "^5.3.3"
   },
   "private": true
