--- a/package.json
+++ b/package.json
@@ -1,45 +1,22 @@
 {
   "name": "etch",
   "version": "1.0.0",
-  "main": "index.ts",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
     "dev": "next dev",
     "build": "next build",
-    "start:next": "next start"
+    "start": "next start"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-navigation/bottom-tabs": "^7.3.2",
-    "@react-navigation/native": "^7.0.18",
-    "@react-navigation/native-stack": "^7.3.2",
     "@supabase/supabase-js": "^2.49.3",
-    "expo": "~52.0.40",
-    "expo-image-picker": "^16.0.6",
-    "expo-router": "^4.0.19",
-    "expo-status-bar": "~2.0.1",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
-    "react": "18.3.1",
-    "react-dom": "^18.2.0",
-    "react-native": "0.76.7",
-    "react-native-qrcode-svg": "^6.3.15",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-native-view-shot": "^4.0.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
     "@types/node": "^20.11.19",
-    "@types/react": "~18.3.12",
-    "@types/react-dom": "^18.2.57",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
     "typescript": "^5.3.3"
   },
   "private": true
