--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.3",
+    "@vercel/analytics": "^1.5.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
