--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "@supabase/supabase-js": "^2.49.3",
     "@vercel/analytics": "^1.5.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
+    "prisma": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
