--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@statsig/react-bindings": "^3.15.1",
+    "@statsig/session-replay": "^3.15.1",
+    "@statsig/web-analytics": "^3.15.1",
     "@supabase/supabase-js": "^2.49.3",
     "@vercel/analytics": "^1.5.0",
     "next": "^14.1.0",
