--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.2.4",
     "typescript": "^5.3.3"
   },
   "private": true
