--- a/package.json
+++ b/package.json
@@ -7,27 +7,31 @@
     "start": "next start"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@prisma/client": "^6.5.0",
+    "@react-navigation/bottom-tabs": "^7.3.3",
     "@statsig/react-bindings": "^3.15.1",
     "@statsig/session-replay": "^3.15.1",
     "@statsig/web-analytics": "^3.15.1",
     "@supabase/supabase-js": "^2.49.3",
+    "@types/react-native": "^0.72.8",
     "@vercel/analytics": "^1.5.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "prisma": "^6.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-native-web": "~0.19.6",
     "statsig-js": "^5.1.0",
     "statsig-node": "^6.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
-    "@types/react": "^18.2.57",
+    "@types/react": "^18.3.20",
     "@types/react-dom": "^18.2.19",
     "eslint": "8.57.1",
     "eslint-config-next": "15.2.4",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.2"
   },
   "private": true
 }
