--- a/EtchMobileNew2/app.json
+++ b/EtchMobileNew2/app.json
@@ -52,8 +52,6 @@
     },
     "owner": "etchh1",
     "sdkVersion": "52.0.0",
-    "runtimeVersion": {
-      "policy": "appVersion"
-    }
+    "runtimeVersion": "1.0.0"
   }
 }
