--- a/EtchMobileNew2/.gitignore
+++ b/EtchMobileNew2/.gitignore
@@ -16,14 +16,8 @@ expo-env.d.ts
 *.p12
 *.key
 *.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
+*.orig.*
+web-build/
 
 # macOS
 .DS_Store
@@ -34,3 +28,17 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
+
+# testing
+/coverage
+
+# Native project folders
+/android
+/ios
+
+# Environment variables
+.env
+.env.*
