--- a/EtchMobileNew2/package.json
+++ b/EtchMobileNew2/package.json
@@ -18,6 +18,7 @@
     "@statsig/js-client": "^3.15.1",
     "@statsig/react-bindings": "^3.15.1",
     "expo": "~50.0.5",
+    "expo-dev-client": "^5.0.15",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.6",
