--- a/EtchMobileNew2/package.json
+++ b/EtchMobileNew2/package.json
@@ -17,8 +17,8 @@
     "@react-navigation/native": "^6.1.9",
     "@statsig/js-client": "^3.15.1",
     "@statsig/react-bindings": "^3.15.1",
-    "expo": "~50.0.5",
-    "expo-dev-client": "^5.0.15",
+    "expo": "~52.0.41",
+    "expo-dev-client": "~3.3.10",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.6",
@@ -28,7 +28,7 @@
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.76.7",
     "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
