--- a/EtchMobileNew2/package.json
+++ b/EtchMobileNew2/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -25,11 +25,11 @@
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
-    "expo-updates": "^0.27.4",
+    "expo-updates": "~0.24.9",
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.76.7",
+    "react-native": "0.73.2",
     "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
