--- a/app.json
+++ b/app.json
@@ -1,41 +1,66 @@
 {
   "expo": {
     "name": "Etch",
-    "slug": "etch",
+    "slug": "etch-marketplace",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
-      "**/*",
-      "./node_modules/@expo/vector-icons/build/vendor/react-native-vector-icons/Fonts/*"
+      "**/*"
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.etchh1.etch"
+      "bundleIdentifier": "com.etch.marketplace",
+      "buildNumber": "1",
+      "infoPlist": {
+        "NSCameraUsageDescription": "This app needs access to the camera to take profile pictures.",
+        "NSPhotoLibraryUsageDescription": "This app needs access to photos for profile pictures and service images.",
+        "NSLocationWhenInUseUsageDescription": "This app needs access to location to show nearby services.",
+        "NSMicrophoneUsageDescription": "This app needs access to the microphone for voice messages in chat."
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/icon.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.etchh1.etch"
+      "package": "com.etch.marketplace",
+      "versionCode": 1,
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION",
+        "RECORD_AUDIO"
+      ]
     },
     "web": {
-      "favicon": "./assets/icon.png"
+      "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-secure-store",
+      "expo-image-picker",
+      "expo-location",
+      "@react-native-voice/voice"
     ],
     "scheme": "etch",
+    "experiments": {
+      "typedRoutes": true
+    },
     "extra": {
+      "router": {
+        "origin": false
+      },
       "eas": {
-        "projectId": "8f68e337-4c1f-4f58-8ee0-5b3b75ff1151"
+        "projectId": "your-eas-project-id"
       }
     }
   }
