--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@prisma/client": "^6.5.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -34,9 +35,12 @@
     "@supabase/supabase-js": "^2.49.3",
     "@tanstack/react-query": "^5.71.1",
     "@vercel/analytics": "^1.5.0",
-    "expo": "^50.0.0",
+    "expo": "~50.0.20",
+    "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.5",
     "expo-modules-core": "^1.11.0",
     "expo-router": "^4.0.19",
+    "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
