--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@expo/vector-icons": "^14.0.4",
     "@expo/webpack-config": "^19.0.0",
     "@prisma/client": "^6.5.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.18",
@@ -35,25 +35,25 @@
     "@supabase/supabase-js": "^2.49.3",
     "@tanstack/react-query": "^5.71.1",
     "@vercel/analytics": "^1.5.0",
-    "expo": "~50.0.20",
-    "expo-image-picker": "~14.7.1",
-    "expo-location": "~16.5.5",
-    "expo-modules-core": "^1.11.0",
-    "expo-router": "^4.0.19",
+    "expo": "^50.0.21",
+    "expo-image-picker": "~16.0.6",
+    "expo-location": "~18.0.10",
+    "expo-modules-core": "^2.2.3",
+    "expo-router": "^4.0.20",
     "expo-secure-store": "^14.0.1",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.9",
+    "expo-web-browser": "^14.0.2",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "prisma": "^6.5.0",
     "react": "^18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.76.0",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-reanimated": "^3.6.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6",
@@ -63,6 +63,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@babel/plugin-transform-typescript": "^7.27.0",
     "@react-native-community/cli": "^18.0.0",
     "@react-native-community/cli-platform-ios": "^17.0.0",
     "@react-native/metro-config": "^0.78.2",
@@ -71,7 +73,7 @@
     "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.11.19",
-    "@types/react": "^18.3.20",
+    "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.19",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^19.0.0",
