--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,15 +40,16 @@
     "noUnusedParameters": true,
     "exactOptionalPropertyTypes": true,
     "jsx": "react-native",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "target": "esnext",
+    "lib": ["esnext"],
+    "allowJs": true,
     "skipLibCheck": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleDetection": "force"
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "isolatedModules": true,
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": [
     "**/*.ts",
